force-app/main/default/objects/Expense_Claim__c/Expense_Claim__c.object-meta.xml
<CustomObject>
    <label>Expense Claim</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Expense Claim #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>