force-app/main/default/objects/Expense_Claim__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>