force-app/main/default/objects/Expense_Claim__c/fields/No_Of_Claims__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Claims__c</fullName>
    <label>No Of Claims #</label>
    <summaryForeignKey>Expenses__c.Expense_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>