force-app/main/default/objects/Expense_Claim__c/fields/Total_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Amount__c</fullName>
    <label>Total Claim Amount</label>
    <summarizedField>Expenses__c.Amount__c</summarizedField>
    <summaryForeignKey>Expenses__c.Expense_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>