force-app/main/default/objects/Expense_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>From_Date__c</columns>
    <columns>Manager__c</columns>
    <columns>No_Of_Claims__c</columns>
    <columns>To_Date__c</columns>
    <columns>Total_Claim_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>